--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             <li class="team-item">
               <picture>
                 <source
-                  srcset="./images/ihor-1x.jpg 1x, ./images/ihor-2x.jpg 2x"
+                  srcset="./images/ihhor-1x.jpg 1x, ./images/ihor-2x.jpg 2x"
                   media="(min-width: 1200px)"
                 />
                 <source
