--- a/portfolio.html
+++ b/portfolio.html
@@ -22,38 +22,38 @@
   </head>
   <body>
     <header class="header">
-      <div class="container header-conteiner">
-        <nav class="header-navigation">
-          <a href="./index.html" class="header-logo link"
-            ><span>Web</span>Studio</a
+      <div class="container header__container">
+        <nav class="navigation">
+          <a href="./index.html" class="navigation__logo link"
+            ><span class="logo__navigation">Web</span>Studio</a
           >
-          <ul class="header-list list">
-            <li class="header-item">
+          <ul class="menu list">
+            <li class="menu__item">
               <a class="menu__link link" href="./index.html">Студія</a>
             </li>
-            <li class="header-item">
+            <li class="menu__item">
               <a class="menu__link current link" href="./portfolio.html"
                 >Портфоліо</a
               >
             </li>
-            <li class="header-item">
+            <li class="menu__item">
               <a class="menu__link link" href="#">Контакти</a>
             </li>
           </ul>
         </nav>
-        <div class="header-conect">
-          <div class="header-connect">
-            <ul class="header-list list">
-              <li class="header-item">
-                <a class="header-mail link" href="mailto:info@devstudio.com">
+        <div class="conect">
+          <div class="connect">
+            <ul class="menu__contacts list">
+              <li class="menu__item">
+                <a class="mail__contact link" href="mailto:info@devstudio.com">
                   <svg class="icon__mail" width="16px">
                     <use href="./images/symbol-defs1.svg#icon-envelope-1"></use>
                   </svg>
                   info@devstudio.com</a
                 >
               </li>
-              <li class="header-item">
-                <a class="header-mail link" href="tel:+380961111111">
+              <li class="menu__item">
+                <a class="tel__contact link" href="tel:+380961111111">
                   <svg class="icon__tell" width="10px">
                     <use
                       href="./images/symbol-defs1.svg#icon-smartphone-1"
